# knowledge_base

./: .env  .env.example  .gitignore  README.md  pyproject.toml
app/clients/: milvus_utils.py  minio_utils.py  mongo_history_utils.py
app/conf/: bailian_mcp_config.py  lm_config.py
app/core/: logger.py
app/import_process/agent/: main_graph.py  node_base.py  node_demo.py  state.py
app/import_process/agent/nodes/: node_bge_embedding.py  node_document_split.py  node_entry.py  node_import_milvus.py  node_item_name_recognition.py  node_md_img.py  node_pdf_to_md.py
app/import_process/api/: file_import_service.py
app/import_process/page/: import-AI修改样式版.html  import-AI生成版.html  import.html
app/import_process/page/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
app/import_process/page/frontend/src/: App.vue  api.js  style.css
app/lm/: lm_utils.py
app/query_process/agent/: main_graph.py  state.py
app/query_process/agent/nodes/: node_answer_output.py  node_item_name_confirm.py  node_rerank.py  node_rrf.py  node_search_embedding.py  node_search_embedding_hyde.py  node_web_search_mcp.py
app/query_process/api/: query_service.py
app/query_process/page/frontend/: SyntheRankAI.vue  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
app/query_process/page/frontend/src/: App.vue  api.js  style.css
app/tool/: download_bgem3.py
app/utils/: milvus_utils.py  rate_limit_utils.py  task_utils.py
docs/: 审查测试问题清单.md  数据设计文档.md  测试计划.md  系统设计文档.md  结果分析与总结.md  课程报告.md  需求分析规格说明书.md  项目开发计划.md
output/: chunks.json
output/H3C LA2608室内无线网关 用户手册-6W100-整本手册/: 94b89e50-5e21-4631-ab29-8cfab56bbd51_content_list.json  94b89e50-5e21-4631-ab29-8cfab56bbd51_content_list_v2.json  94b89e50-5e21-4631-ab29-8cfab56bbd51_model.json  H3C LA2608室内无线网关 用户手册-6W100-整本手册.md  H3C LA2608室内无线网关 用户手册-6W100-整本手册_new.md  layout.json
prompts/: answer_out.prompt
test/: env和系统变量优先级测试.py  test_graph_flow.py  test_workflow.py  日志测试.py
