[project]
name = "knowledge-base"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "flagembedding>=1.4.0",
    "grandalf>=0.8",
    "langchain>=1.3.2",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.2",
    "loguru>=0.7.3",
    "minio>=7.2.20",
    "numpy>=2.4.6",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "flagembedding>=1.3.5",
    "transformers>=4.45.0,<5.0.0",
    "modelscope>=1.37.1",
    "pymilvus>=3.0.0",
]


[tool.uv.sources]
# 强制从 NVIDIA 源安装
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }
torchaudio = { index = "pytorch-cuda" }

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
