[project]
name = "knowledge-base"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.11.*"
dependencies = [
    "grandalf>=0.8",
    "langchain>=1.2.13",
    "langchain-openai>=1.1.11",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.3",
    "loguru>=0.7.3",
    "minio>=7.2.20",
    "numpy>=1.26.4,<2.0.0",  # 显式限制在 2.0 以下
    "pymilvus[milvus-lite,model]>=2.6.10",
    "pymongo>=4.16.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "torchaudio>=2.4.0",
    "flagembedding>=1.3.5",
    "modelscope>=1.35.1",
    "transformers>=4.45.0,<5.0.0",
    "uvicorn[standard]>=0.42.0",
    "fastapi>=0.135.2",
    "python-multipart>=0.0.22",
    "python-dotenv>=1.2.2",
    "openai-agents>=0.13.5",
    "dashscope>=1.25.16",
]

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }
torchaudio = { index = "pytorch-cuda" }


[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
